#34 Re-design of admin area. Fixed header view on mobile

--- a/src/Presentation/Nop.Web/Administration/Content/styles.css
+++ b/src/Presentation/Nop.Web/Administration/Content/styles.css
@@ -731,6 +731,10 @@ ul.common-list {
 }
 
 @media (max-width: 767px) {
+    .main-header {
+        max-height: 200px;
+    }
+
     .main-sidebar, .left-side {
         padding-top: 155px;
     }
